# ccfec

./: .gitignore  CMakeLists.txt  LICENSE  README.md  decoder.c  encoder.c  ff.c  ff_avx2.c  ff_basic.c  ff_neon.c  ff_online.c  ff_simple.c  ff_ssse3.c
example/: CMakeLists.txt  cxx-example.cpp  example.c
include/ccfec/: decoder.h  encoder.h  ff.h  ff_online.h
test/: CMakeLists.txt  ReedSolomonFecTest.cpp  runner.cpp
